[refs #113206] South: solve iframe larger than layout issue in Data and statistics.

--- a/src/eni/seis/theme/theme-south/src/less/south.less
+++ b/src/eni/seis/theme/theme-south/src/less/south.less
@@ -777,3 +777,18 @@ div#viewlet-cookiepolicy {
     }
   }
 }
+
+body.template-folder_listing_custom.section-areas-of-work.subsection-data-and-statistics {
+  div.container.site-container {
+    width: 100%;
+    max-width: initial;
+
+    div.tableauPlaceholder {
+      margin: auto;
+    }
+
+    h2.text-center {
+      text-align: center;
+    }
+  }
+}
